test/should-fail/jfxc3994sub.fx
/**
 * @subtest jfxc3994.fx
 */

public class jfxc3994sub {
   public var x;
}
